Fix Sample Code Overflow

--- a/web/styles/editor.css
+++ b/web/styles/editor.css
@@ -148,6 +148,10 @@ div.sample-code code#sample-code-text {
   main {
     flex-direction: column;
   }
+  
+  div.sample-code code#sample-code-text {
+    width: 300px;
+  }
 
   div.editor-card {
     width: 80vw;
